# hut_10sqft

./: .gitignore  .travis.yml  README.md  README.rst  cron_ros_mirror  dot_bashrc_default  dot_emacs_default  dot_gitconfig  dot_gitignore_global  install_ubuntu_common.bash  install_ubuntu_common.sh  package.xml
config/: dot_gitconfig  dot_nvidia-settings-rc_130s-p50  dot_tmux.conf  gnome-system-monitor.desktop  tmux_default.conf
config/bash/: bash_alias  (+26 more)
executable/: install_ubuntu_common.sh  mv_ext  replace_str
hut_10sqft/: README.md  package.xml  pyproject.toml
hut_10sqft/config/: dot_gitconfig  dot_gitconfig_chromebook  dot_tmux.conf  dot_xbindkeysrc  gnome-terminal.config.tgz  terminal_shortcuts_130s-serval_20230327.dconf  terminal_visible-name_1_130s-serval_20230327.dconf  terminal_visible-name_2_130s-serval_20230327.dconf
hut_10sqft/config/bash/: 130s-brya.bash  bash_alias  bash_application_130s-mac1.bash  bash_application_btt-osrf.bash  bash_application_elwing.bash  bash_application_mac1.bash  bash_application_serval.bash  bash_application_serval_vm1.bash  bash_application_serval_vm_oneiric.bash  bash_application_serval_vm_precise.bash  bash_setup_common.bash  bashrc_130s-kudu1  bashrc_130s-p16s  bashrc_130s-serval  bashrc_130s-t440s  mac_common.bash  rc_130s-kudu1.bash  rc_130s-p16s.bash  rc_130s-p50.bash  rc_chromeos.bash  rc_debian.bash  rc_t440s.bash  rc_t440s_vm_precise.bash  ubuntu_common.bash
hut_10sqft/config/emacs/: debian.el  emacs.el  emacs_130s-brya.el  emacs_130s-kudu1.el  emacs_130s-kudu1_vm_precise.el  emacs_130s-mac1.el  emacs_130s-mac1_12.04_vm.el  emacs_130s-p16s.el  emacs_130s-serval.el  emacs_130s-t440s.el  emacs_130s-t440s_vm_ubuntu12.04.el  emacs_130s-w510.el  emacs_btt.el  emacs_chromeos.el  emacs_ubuntu.el  emacs_ubuntu.el~  emacs_ubuntu_trusty.el  ubuntu-trusty_init.el
hut_10sqft/config/emacs/3rd_party_emacs/: transpose-frame.el
hut_10sqft/config/ros/: setup_ros_130s_mac1.bash  setup_ros_btt-osrf.bash  setup_ros_btt.bash  setup_ros_common.bash  setup_ros_serval.bash  setup_ros_serval_vm_oneiric.bash  setup_ros_serval_vm_quantal.bash
hut_10sqft/doc/: index.md
hut_10sqft/executable/: install_ubuntu_common.sh  rm_dropbox_conflictfiles.sh
hut_10sqft/src/hut_10sqft/: __main__.py  init_setup.py  util.py
hut_10sqft/test/: test_osutil.py  test_suco.py  test_util.py
hut_10sqft/test/testdata1/depth1/depth2/depth3/depth4/depth5/depth6/depth7/: prooving3.xml
script/: checkversion_ros.bash  checkversion_ros.sh  imgs_to_pdf  install_ubuntu_common.sh  measure_performace.sh  replace_str  rm_dropbox_conflictfiles.bash  rm_dropbox_conflictfiles.sh
src/: replace_str_infile.py  util.py
test/: test_conf_bash.sh  test_install.sh  test_overall_travis.sh  test_util.py
util/: checkversion_ros.bash  measure_performace.sh  replace_str  replace_str_infile  replace_str_infile.py  rm_dropbox_conflictfiles.bash  util.py
(+48 files in other folders)
